experimental/parser/testdata/parser/syntax/lonely.proto.stderr.txt
warning: missing `package` declaration
 --> testdata/parser/syntax/lonely.proto
   = note: not explicitly specifying a package places the file in the unnamed
           package; using it strongly is discouraged

error: unexpected `;` in `edition` declaration
  --> testdata/parser/syntax/lonely.proto:1:8
   |
 1 | edition;
   |        ^ expected `=`
   |
  help: consider inserting a `=`
   |
 1 | edition = ;
   |        +++

error: unexpected `syntax` declaration
  --> testdata/parser/syntax/lonely.proto:3:1
   |
 1 | edition;
   | -------- previous declaration is here
 2 |
 3 | syntax = ;
   | ^^^^^^^^^^
  help: remove this
   |
 3 | - syntax = ;
   |
   = note: a file may contain at most one `syntax` or `edition` declaration

error: unexpected `;` in `syntax` declaration
  --> testdata/parser/syntax/lonely.proto:3:10
   |
 3 | syntax = ;
   |          ^ expected expression

warning: the `package` declaration should be placed at the top of the file
  --> testdata/parser/syntax/lonely.proto:5:1
   |
 3 | syntax = ;
   | ---------- previous declaration is here
 4 |
 5 | package test;
   | ^^^^^^^^^^^^^
   = help: a file's `package` declaration should immediately follow the `syntax`
           or `edition` declaration

encountered 3 errors and 2 warnings
